# fast-dlp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: downloader.py  main.py
src/: app.py  config.py  main.py
src/core/: exceptions.py  logger.py
src/routers/: media.py
src/schemas/: media.py
src/services/: downloader.py
src/utils/: helpers.py
static/: index.css  index.html  index.js
tests/: conftest.py  test_downloader.py  test_media_router.py
