[project]
name = "fast-dlp"
version = "0.1.0"
description = "A lightweight, asynchronous web application for downloading YouTube media"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
    "yt-dlp-ejs>=0.8.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.21",
    "types-yt-dlp>=2026.3.17.20260605",
]
